--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <h1>Hi</h1>
-    <p>Hi guys this is my first video please like and subscribe</p>
+    <h1><strong>Gamer's Dream Hub</strong></h1>
+    <p>info and shit</p>
 </body>
 
 </html>
