--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1><strong>Gamer's Dream Hub</strong></h1>
-    <h2 class="Left">Welcome to our gaming server! You can find everything from the server here, like how to use our custom bot and understand how the roles work.</h2>
+    <h2>Welcome to our gaming server! You can find everything from the server here, like how to use our custom bot and understand how the roles work.</h2>
 
     <p class="Center">Contact one of our staff at either @Swampy_Red_Eye#4308, @NotShro0d#1561, @luckiestplot#2609 or @Neko Lover#7211</p>
 
